--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,26 +8,30 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
 }
+
+.main {
+  margin-left: 10px; /* Adjust for the sidebar width */
+  width: calc(100% - 264px); /* Adjust for the sidebar width */
+  /* Add any other styles you need */
+}
+/* styles/SideBar.module.css */
+.sidebar {
+  width: 264px;
+  height: 100vh;
+  /* Add any other styles you need */
+}
+
+.layout {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  height: 100vh;
+  width: 100%;
+}
+
+
