--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,11 +3,12 @@
 @tailwind utilities;
 
 .customMain {
-  margin-left: 10px; /* Adjust for the sidebar width */
   width: calc(100% - 264px); /* Adjust for the sidebar width */
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #f6f5fb;
+  padding: 0 15px;
 }
 /* styles/SideBar.module.css */
 .sidebar {
@@ -18,8 +19,8 @@
 
 @media screen and (max-width: 760px){
   .customMain {
-    width: 100%; /* Adjust for the sidebar width */
-    /* Add any other styles you need */
+    width: 100%;
+    background-color: #f6f5fb;
   }
   .sidebar {
     width: 0;
