--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,7 +33,7 @@
   display: flex;
   justify-content: space-between;
   flex-direction: row;
-  height: 100vh;
+  height: 100%;
   width: 100%;
 }
 
